# ursa-minor-ffb

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.dev  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
installer/: .gitignore  AIP-NOTES.txt  Ursa Minor FFB.aip  build-staging.ps1  ursa-minor-ffb.aip
scripts/: build-staging.ps1  bump-version.ps1
src/: build.rs  hid.rs  lib.rs  log.rs  main.rs  preset.rs  rumble.rs  sim.rs  tray.rs  types.rs  ui.rs  updater.rs
src/hid/: mod.rs  protocol.rs  stub.rs  win32.rs  worker.rs
src/preset/: simvars.rs
src/sim/: mod.rs  parse.rs  stub.rs  worker.rs
src/updater/: apply.rs  mod.rs
tests/: engine_pause.rs  pipeline.rs  presets.rs
tests/support/: mod.rs
windows/: resource.rc
