[package]
name = "ursa_minor_ffb"
version = "1.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
# GUI
eframe = { version = "0.27", default-features = true }
egui = "0.27"
egui_extras = "0.27"

# HID
hidapi = "2.6"
rusb = "0.9"

# DLL loader for SimConnect
libloading = "0.8"

# utils
tray-icon = "0.13"
crossbeam-channel = "0.5"
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"
instant = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
chrono = "0.4"

# Win32 API
once_cell = "1.19"
widestring = "1.0"
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader"
] }

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
