[package]
name = "ursa_minor_ffb"
version = "2.1.0"
edition = "2021"
build = "src/build.rs"
default-run = "ursa-minor-ffb"  # Оставляем основное приложение

[lib]
name = "ursa_minor_ffb"
path = "src/lib.rs"

[[bin]]
name = "ursa-minor-ffb"
path = "src/main.rs"
required-features = ["app"]

[features]
default = []
app = []

[dependencies]
crossbeam-channel = "0.5"
parking_lot = "0.12"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
# GUI
eframe = { version = "0.27", default-features = true }
egui = "0.27"
egui_extras = "0.27"

# HID
hidapi = "2.6"

# DLL loader for SimConnect
libloading = "0.8"

# utils
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Win32 API
once_cell = "1.19"
widestring = "1.0"
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_Storage_FileSystem",
  "Win32_Devices_HumanInterfaceDevice"
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4"

[dev-dependencies]
mockall = "0.13"
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
